maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:26: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^