maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    keepHandOnSideWall()
  }
  prendBiscuit()
}

def keepHandOnSideWall() {
  if (murcote()){
    if (!estFaceMur())
    	avance()
    else
    	droite()

    
  }
 
  
}



def murcote() : Boolean = {

    if (estFaceMur())
    	droite()
    else {
    	gauche()
    	if (estFaceMur()){
      	droite()
      	return true
    	}
    	else {
      	droite()
      	return false
    	}
    }
  
  
}